Imported modgui for b_overdrive and b_reverb from mod-lv2-data

--- a/b_overdrive/Makefile
+++ b/b_overdrive/Makefile
@@ -36,7 +36,7 @@ jboverdrive: jboverdrive.c overdrive.o
 lv2: manifest.ttl $(LV2NAME)$(LIB_EXT) $(LV2NAME).ttl
 
 manifest.ttl:
-	sed "s/@LV2NAME@/$(LV2NAME)/;s/@LIB_EXT@/$(LIB_EXT)/" manifest.ttl.in > manifest.ttl
+	sed "s/@LV2NAME@/$(LV2NAME)/;s/@LIB_EXT@/$(LIB_EXT)/;s/@MODGUITTL@/$(MODGUITTL)/" manifest.ttl.in > manifest.ttl
 
 $(LV2NAME).ttl: $(LV2NAME).ttl.in Makefile
 	sed "s/@VERSION@/lv2:microVersion $(LV2MIC) ;lv2:minorVersion $(LV2MIN) ;/g;s/@MODBRAND@/$(MODBRAND)/;s/@MODLABEL@/$(MODLABEL)/" \
@@ -65,6 +65,11 @@ ifeq ($(LV2AVAIL)$(INSTALL_EXTRA_LV2), yesyes)
 	install -d $(DESTDIR)$(lv2dir)/$(LV2NAME)
 	install -m755 $(LV2NAME)$(LIB_EXT) $(DESTDIR)$(lv2dir)/$(LV2NAME)
 	install -m644 manifest.ttl $(LV2NAME).ttl $(DESTDIR)$(lv2dir)/$(LV2NAME)
+ifneq ($(MOD),)
+	install -m644 modgui.ttl $(DESTDIR)$(lv2dir)/$(LV2NAME)
+	install -d $(DESTDIR)$(lv2dir)/$(LV2NAME)/modgui
+	cp -r modgui/* $(DESTDIR)$(lv2dir)/$(LV2NAME)/modgui
+endif
 endif
 
 uninstall:
@@ -74,6 +79,7 @@ ifneq ($(strip $(binaries)),)
 endif
 	rm -f $(DESTDIR)$(lv2dir)/$(LV2NAME)/*.ttl
 	rm -f $(DESTDIR)$(lv2dir)/$(LV2NAME)/$(LV2NAME)$(LIB_EXT)
+	rm -rf $(DESTDIR)$(lv2dir)/$(LV2NAME)/modgui
 	-rmdir $(DESTDIR)$(lv2dir)/$(LV2NAME)
 
 clean:
